# continuityos

./: .gitignore  ADVOCATE.md  BENCHMARKS.md  BUILD_GATE_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INTEGRATION.md  LICENSE  NOTICE  README.md  THREAT_MODEL.md  _BUILD_WHEEL.bat  _PUSH_GITHUB.bat  _VERIFY_SIM.bat  brain_trading.db-journal  docker-compose.yml  gate_hook.py  hermes_memory.db  llms.txt  mcp_bridge.bat  mcp_bridge.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bench/: README.md  bench_results.json  continuitybench.py  locomo_bench.py  owasp_llm_bench.py  recall_bench.py
continuityos/: __init__.py  _version.py  a2a.py  adapters.py  advocate.py  agents.py  angel.py  api.py  audit.py  bus.py  cli.py  continuity.py  control.py  db.py  dedupe.py  dialectic.py  embedders.py  epochgraph.py  extract.py  fork.py  frontier.py  gc.py  index.py  ledger_server.py  mcp_server.py  memory.py  metering.py  monetization.py  orchestrator.py  pyproject.toml  routing.py  rules_export.py  store.py  twin.py  updater.py  wizard.py
continuityos/gate/: __init__.py  classifier.py  claude_hook.py  cli.py  engine.py  ledger.py  policy.py  rollback.py  spec.py
continuityos/sim/: README.md  __init__.py  contracts.py  detector.py  gateway.py  loop.py  memory_plane.py  pandora_mock.py  rollback.py
demo/: killer_demo.sh  v09_tour.sh
docs/: ARCHITECTURE.md  MCP_INTEGRATION.md  QUICKSTART.md
examples/: demo_block_rm_rf.sh  demo_ledger_tamper.py  demo_secret_read.sh  langchain_memory.py  orca_pilot_arena.py  quickstart.py  sample_chatgpt_export.json  seed_demo.py
examples/claude-code/: settings.json
tests/: release_hardening_probes.py  test_a2a.py  test_adapters.py  test_advocate.py  test_api.py  test_audit.py  test_bus.py  test_ci_linux_symlink_realpath.py  test_ci_review_tool.py  test_continuitybench_portable_context.py  test_control.py  test_db.py  test_epoch_api.py  test_epochgraph.py  test_frontier.py  test_gate.py  test_gate_hardening.py  test_gate_hook_bridge.py  test_hook.py  test_ledger.py  test_mcp_upsert.py  test_mecw_scan.py  test_memory.py  test_metering.py  test_monetization.py  test_orchestrator.py  test_packaging_hygiene.py  test_pointer_occ.py  test_routing.py  test_rules_export.py  test_sim.py  test_srd_a2a_mcp.py  test_temporal_extract.py  test_updater.py  test_upsert.py  test_version_consistency.py
tools/: __init__.py  ci_review.py
