[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "continuityos"
version = "0.8.6"
description = "Durable, hybrid (structural + semantic) memory for AI agents and humans. Local-first, zero external services."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "ContinuityOS contributors" }]
keywords = ["memory","ai-agents","mcp","semantic-search","vector","rag","llm","continuity"]
dependencies = []          # core is stdlib-only

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
fast = ["fastembed>=0.3"]
st = ["sentence-transformers>=2.2"]
m2v = ["model2vec>=0.3"]
embeddings = ["fastembed>=0.3", "sentence-transformers>=2.2", "model2vec>=0.3"]

# Backward-compatible aliases for older docs/users.
fastembed = ["fastembed>=0.3"]
sentence-transformers = ["sentence-transformers>=2.2"]

dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.5"]

[project.scripts]
cos = "continuityos.cli:main"
continuity = "continuityos.gate.cli:main"

[project.urls]
Homepage = "https://sovereign-arena-site.vercel.app/continuityos"
Source = "https://github.com/bitmaster162/continuityos"

[tool.setuptools.packages.find]
include = ["continuityos*"]
